# lynza

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  event.json  local_runner.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_payload.json  template.yaml
localstack/init/: init_resources.sh
src/app/: handler.py
src/app/adapters/: message_bus.py  storage.py
src/app/domain/: sentiment_analysis.py
src/app/utils/: parse_event.py
tests/: conftest.py
tests/integration/: test_handler.py
tests/integration/adapters/: test_message_bus.py  test_storage.py
tests/unit/: test_handler.py
tests/unit/adapters/: test_message_bus.py  test_storage.py
tests/unit/domain/: test_sentiment_analysis.py
